--- a/basketclimb/Info.plist
+++ b/basketclimb/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>edu.nyu.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.noahlemen.assignment3</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
